# Isabelle_Semantic_Embedding

./: .gitignore  README.md  ROOT  Semantic_Embedding.thy  debug_launcher.py  migrate_experience_patterns.py  migrate_float32_to_q15.py  migrate_provider_to_hfname.py  migrate_record_provenance.py  migrate_xor_thm_keys.py  pyproject.toml  semantics_manage.py  setup.py  test_document_text.py  test_embedding_provider_refactor.py  test_experience_index.py  test_getenv_resolution.py  test_r2_sync.py
.github/workflows/: release-conda.yml  verify-pypi.yml  wheels.yml
Isabelle_Semantic_Embedding/: __init__.py  _paths.py  _user_config.py  _vecarith.py  config_template.yaml  desugar.py  document_text.py  embedding_config.py  embedding_config_template.yaml  experience_index.py  experience_store.py  hover.py  premise_selection.py  r2_sync.py  semantic_embedding.py  semantic_interpretation.py  semantics.py  semantics_manage.py  test_desugar_callback.py  test_resolve_notation_callback.py  theory_structure.py
Test/: Command_At_Position_Test.thy  Document_State_Experiment.thy  Eval_Thy_Experiment.thy  Induct_Rules_Test.thy  Query_Tool_Test.thy  test_desugar_e2e.py  test_position_context.py  test_resolve_notation_e2e.py
Tools/: dump_keys.py  explain_term.ML  infra_filter.ML  interpret_command.ML  pide_state.ML  semantic_interpretation_app.ML  semantic_store.ML  simd_vector.ML  theory_structure.ML
Tools/Vector_Arith/: CMakeLists.txt  isabelle_vector-inl.h  isabelle_vector.cpp  test_gather.cpp  test_ml_dlopen.c  vecgather.c
conda/: recipe.yaml
doc/: explain_term_printer.md  position_context_resolution.md
src/scala/: pide_state.scala
tests/: test_vecarith.py
