[build-system]
# setup.py stages a compiled artifact into the wheel and overrides bdist_wheel's
# tag; 64 is the first setuptools that exposes build_py.editable_mode. cmake and a
# C/C++ toolchain must be on PATH -- they cannot be declared here. See setup.py.
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Isabelle_Semantic_Embedding"
version = "0.1.0"
description = "Isabelle Semantic Embedding"
readme = "README.md"
license = "LGPL-2.1-or-later"
authors = [
    { name="Qiyuan Xu", email="xqyww123@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    # The wheel carries libisabelle_vector.so, an ELF pinned to one architecture.
    "Operating System :: POSIX :: Linux",
]
dependencies = ["msgpack", "Isabelle_RPC_Host", "rocksdict", "lmdb", "platformdirs", "transformers", "numpy", "faiss-cpu", "requests", "diskcache", "claude_agent_sdk", "pyyaml"]

[project.urls]
"Homepage" = "https://github.com/xqyww123/Semantic_Embedding"

[tool.setuptools.packages.find]
include = ["Isabelle_Semantic_Embedding", "Isabelle_Semantic_Embedding.*"]
exclude = ["contrib", "contrib.*"]

[tool.setuptools.package-data]
# libisabelle_vector.so is compiled and staged into the build tree by setup.py's
# build_py, not tracked in the source tree; listing it keeps sdist-derived and
# prebuilt-drop-in builds picking it up too.
Isabelle_Semantic_Embedding = ["embedding_config_template.yaml", "libisabelle_vector.so"]
